[package]
name = "leetcode"
version = "0.1.0"
authors = ["Alexey Fedorov <lexxfedoroff@gmail.com>"]
edition = "2018"

[[bench]]
name = "benchmark"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.51"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3.3"

